--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Graphicloads-Colorful-Long-Shadow-Cloud.ico">
 
     <title>DAD_atv2_Agrp6</title>
 
@@ -25,7 +26,7 @@
         <p>&#x26c5</p>
 
         <h2> Atualmente 21° em São Paulo</h2>
-        
+
         <h2>13°/<strong>23°</strong></h2>
 
         <ul>
@@ -44,7 +45,7 @@
 
         <br>
 
-        <button>Trocar Cidade</button>
+        <a href="novacidade.html"><button>Trocar Cidade</button></a>
 
     </div>
 
