--- a/novacidade.html
+++ b/novacidade.html
@@ -23,7 +23,7 @@
         <br>
         <li>&#9728 <strong>Terça-Feira</strong><p>25°/ <strong>33°</strong></p></li>
     </ul>
-    <button>Trocar de Cidade</button></a> 
+    <a href="index.html"><button>Trocar de Cidade</button></a>
     </div>
    
 </body>
